--- a/_config.yml
+++ b/_config.yml
@@ -19,10 +19,10 @@ sidebar-avatar: /img/about-BY-gentle.jpg      # use absolute URL, seeing it's us
 # SNS settings
 RSS: false
 # weibo_username:     qiubaiying
-zhihu_username:     qiubaiying
-github_username:    qiubaiying
-facebook_username:  baiying.qiu.7
-jianshu_username:   e71990ada2fd
+zhihu_username:     大大帅
+github_username:    Dadashuai1042
+CSDN_username:  GG__bond(｡･ω･｡)
+jianshu_username:   dadashuai
 #twitter_username:   qiubaiying
 
 
